--- a/src/Components/SignInForm/SignInForm.css
+++ b/src/Components/SignInForm/SignInForm.css
@@ -4,12 +4,27 @@
   display: flex;
   flex-direction: column;
 }
-.form input,
+.form input {
+  padding: 10px;
+  margin: 5px;
+}
 button {
+  cursor: pointer;
   padding: 10px;
   margin: 10px;
 }
 .form span {
   cursor: pointer;
   color: blue;
+}
+.error-label {
+  color: white;
+  padding: 5px;
+  margin: 0px 5px;
+  background-color: rgb(197, 69, 69);
+  text-align: center;
+}
+.login-options {
+  display: flex;
+  justify-content: space-evenly;
 }
